crates/seiso_rules/tests/snapshots/cross_file__lnk002_example.snap
---
source: crates/seiso_rules/tests/cross_file.rs
expression: diagnostics
---
[
  {
    "code": "LNK002",
    "message": "Anchor \"removed\" does not exist in reference.md.",
    "filename": "guide.md",
    "location": {
      "row": 5,
      "column": 6
    },
    "end_location": {
      "row": 5,
      "column": 42
    },
    "byte_range": {
      "start": 26,
      "end": 62
    },
    "fix": null,
    "url": null,
    "related": [
      {
        "filename": "reference.md",
        "location": {
          "row": 1,
          "column": 1
        },
        "end_location": {
          "row": 1,
          "column": 1
        },
        "byte_range": {
          "start": 0,
          "end": 0
        },
        "message": "The target document has no matching anchor."
      }
    ],
    "suggestion": "Update the fragment to an existing heading or explicit HTML anchor in the target document."
  }
]
