crates/seiso_rules/tests/snapshots/cross_file__ptr002_example.snap
---
source: crates/seiso_rules/tests/cross_file.rs
expression: diagnostics
---
[
  {
    "code": "PTR002",
    "message": "Link points to the directory \"docs\" without a declared catalog.",
    "filename": "guide.md",
    "location": {
      "row": 5,
      "column": 6
    },
    "end_location": {
      "row": 5,
      "column": 37
    },
    "byte_range": {
      "start": 26,
      "end": 57
    },
    "fix": null,
    "url": null,
    "related": [
      {
        "filename": "docs",
        "location": {
          "row": 1,
          "column": 1
        },
        "end_location": {
          "row": 1,
          "column": 1
        },
        "byte_range": {
          "start": 0,
          "end": 0
        },
        "message": "Directory target."
      }
    ],
    "suggestion": "Link to the document that answers the reader's question, or declare this directory in lint.ptr.catalog-dirs if it is a maintained index."
  }
]
